src/recipe/parser/snapshots/rattler_build__recipe__parser__requirements__test__compiler_serde-2.snap
---
source: src/recipe/parser/requirements.rs
expression: deserialized
---
build:
  - __COMPILER gcc

