src/recipe/parser/snapshots/rattler_build__recipe__parser__requirements__test__compiler_serde.snap
---
source: src/recipe/parser/requirements.rs
expression: requirements
---
build:
  - compiler: gcc

